# dpll-algo

./: CHANGELOG.md  README.md  dpll-algo.cabal  example.cnf  run_benchmarks.sh  stack.yaml
.stack-work/: stack.sqlite3
benchmarks/: 2sat_test0.cnf  2sat_test3.cnf  2sat_test4.cnf  2sat_test5.cnf  2sat_test6.cnf
src/: Main.hs  Solver.hs
